--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Belajar HTTP (Hypertext Transfer Protocol)</title>
 </head>
 <body>
-    
+    <h1>Agenda Belajar</h1>
+    <ul>
+        <li>Pengenalan HTTP</li>
+        <li>URL</li>
+        <li>HTTP Method</li>
+        <li>HTTP Header</li>
+        <li>HTTP Body</li>
+        <li>HTTP Response</li>
+        <li>HTTP Cookie</li>
+        <li>Dan lain-lain</li>
+    </ul>
 </body>
 </html>
