--- a/http-intro.html
+++ b/http-intro.html
@@ -46,5 +46,8 @@
         <li>Untuk menangani permasalahan seperti ini, HTTP memiliki fitur yang bernama HTTP Cookie</li>
         <li>HTTP Cookie memaksa client menyimpan informasi yang diberikan oleh server</li>
     </ul>
+
+    <a href="index.html">Back</a> ||
+    <a href="http-version.html">Next</a>
 </body>
 </html>
