--- a/http-terminology.html
+++ b/http-terminology.html
@@ -55,5 +55,7 @@
         <li>Web Server berisi informasi dan data yang bisa di akses oleh client</li>
         <li>Web Server akan menerima request dari client, dan membalas request tersebut berupa informasi yang di minta oleh client</li>
     </ul>
+
+    <a href="http-version.html">Back</a>
 </body>
 </html>
