--- a/http-version.html
+++ b/http-version.html
@@ -30,5 +30,8 @@
         <li>Hasilnya HTTPS jauh lebih aman dibanding dengan HTTP biasa</li>
         <li>Web yang menggunakan HTTPS akan menggunakan https:// pada URL-nya, dan yang hanya menggunakan HTTP tanpa enkripsi akan menggunakan http://</li>
     </ul>
+
+    <a href="http-intro.html">Back</a> ||
+    <a href="http-terminology.html">Next</a>
 </body>
 </html>
