--- a/http-intro.html
+++ b/http-intro.html
@@ -19,7 +19,7 @@
         <li>HTTP mengikuti arsitektur client dan server</li>
         <li>Client mengirimkan HTTP Request untuk meminta atau mengirimkan informasi ke server</li>
         <li>Dan server membalasnya dengan HTTP Response dari HTTP Request yang diterima</li>
-        <img src="http-img.png" width="40%">
+        <img src="images/http-img.png" width="500px">
     </ul>
 
     <h2>Plain Language and Human Readable</h2>
