--- a/http-terminology.html
+++ b/http-terminology.html
@@ -56,6 +56,7 @@
         <li>Web Server akan menerima request dari client, dan membalas request tersebut berupa informasi yang di minta oleh client</li>
     </ul>
 
-    <a href="http-version.html">Back</a>
+    <a href="http-version.html">Back</a> ||
+    <a href="http-flow.html">Next</a>
 </body>
 </html>
