network tool tips

--- a/browser-net-tool.html
+++ b/browser-net-tool.html
@@ -14,7 +14,21 @@
         <li>Dengan Network Tool, kita bisa melihat semua detail HTTP Request dan HTTP Response yang dilakukan oleh Client dan Server</li>
     </ul>
 
-    <a href="http-flow.html">Back</a> ||
-    <a href=""></a>
+    <h2>Tugas</h2>
+    <ul>
+        <li>
+            Buka website
+            <a href="https://www.programmerzamannow.com" target="_blank">https://www.programmerzamannow.com</a>
+        </li>
+        <li>Lalu lihat informasi HTTP Request dan HTTP Response yang terjadi menggunakan Network Tool yang terdapat di Web Browser yang kita gunakan</li>
+    </ul>
+
+    <h2>Hasil</h2>
+    <img src="images/network-tool.png" width="1000px" style="border-radius: 10px;">
+
+    <p>
+        <a href="http-flow.html">Back</a> ||
+        <a href=""></a>
+    </p>
 </body>
 </html>
