--- a/browser-net-tool.html
+++ b/browser-net-tool.html
@@ -28,7 +28,7 @@
 
     <p>
         <a href="http-flow.html">Back</a> ||
-        <a href=""></a>
+        <a href="request-response.html">Next</a>
     </p>
 </body>
 </html>
