--- a/http-method.html
+++ b/http-method.html
@@ -28,5 +28,8 @@
         <li>OPTIONS method digunakan untuk mendeskripsikan opsi komunikasi yang tersedia</li>
         <li>TRACE method digunakan untuk request method debugging. Response TRACE method akan mengembalikan seluruh informasi yang dikirim oleh Client. Saat membuat web, sangat tidak di rekomendasikan mengaktifkan TRACE method ketika sudah live di production</li>
     </ul>
+
+    <a href="request-response.html">Back</a> ||
+    <a href="http-url.html">Next</a>
 </body>
 </html>
